# Strife

./: Cargo.toml  LICENSE  README.md
src/: client.rs  event_handler.rs  event_manager.rs  events.rs  heart_beat.rs  json_data.rs  lib.rs
src/json_related/: mod.rs  ready.rs  user.rs
src/json_related/activities_related/: activities.rs
src/json_related/guild_related/: guild.rs  mod.rs  stickers.rs
src/json_related/guild_related/channel_related/: channels.rs
src/json_related/guild_stuff/: channels.rs  guild.rs  mod.rs  roles.rs  voice_states.rs
src/json_related/guild_stuff/channel_stuff/: channels.rs  mod.rs
src/json_related/ops/: mod.rs  op2.rs
src/json_related/welcomescreen_related/: welcomescreens.rs
src/ops/: op10.rs  op11.rs  op2.rs
stife-types/src/guild_related/: emojis.rs  guild.rs  guild_members.rs
stife-types/src/guild_related/guild_scheduled_event_related/: guild_scheduled_events.rs
strife-types/: Cargo.toml
