[package]
name = "strife"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.9", features = ["json"] }
async-tungstenite = { version = "0.17.0", features = ["tokio-native-tls"] }

tokio = { version = "1.17.0", features = ["full"] }
tokio-stream = { version = "0.1.8" }
tokio-native-tls = "0.3.0"
futures-util = { version = "0.3.21" }
futures-channel = { version = "0.3.21" }

serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.79" }

strife-types = { path = "../Strife-Types" }
log = "0.4.17"